--- a/templates/index.pug
+++ b/templates/index.pug
@@ -13,4 +13,6 @@ p We are an umbrella student organization that funds and supports student psyche
 
 p We are governed by a council of psychedelic student leaders where each school has 2 votes on the strategic direction of the network as a whole. This includes: funding allocations, expansion decisions, along with global research directions
 
+p Feel free to reach us by #[a(href="mailto:ipnpsychedelics@gmail.com") email]
+
 p Stay tuned
